--- a/style.css
+++ b/style.css
@@ -87,3 +87,11 @@ button:hover {
 .hidden {
   display: none;
 }
+#admin-controls {
+    border: 2px solid #ccc;
+    padding: 10px;
+    margin-top: 20px;
+}
+#admin-actions input {
+    margin: 5px 0;
+}
